--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ROYAL CARS - Car Rental HTML Template</title>
+  <title>ROYAL CARS - Car Rental </title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Free HTML Templates" name="keywords">
   <meta content="Free HTML Templates" name="description">
@@ -26,10 +26,24 @@
 
   <!-- Template Stylesheet -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/lib/easing/easing.min.js"></script>
+  <script src="assets/lib/waypoints/waypoints.min.js"></script>
+  <script src="assets/lib/owlcarousel/owl.carousel.min.js"></script>
+  <script src="assets/lib/tempusdominus/js/moment.min.js"></script>
+  <script src="assets/lib/tempusdominus/js/moment-timezone.min.js"></script>
+  <script src="assets/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+  <script src="assets/js/main.js"></script>
 </head>
+
+
+
+
+
   <body>
 
-
+  <script src="assets/js/main.js"></script>
   <!-- Template Javascript -->
   <!-- JavaScript Libraries -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -42,6 +56,8 @@
   <script src="assets/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
     <div id="root"></div>
     <!--
+
+
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
